BAU fix CreatePaymentResult swagger model
- swagger model is out of date
- see https://govuk.zendesk.com/agent/tickets/3783443
